# AURELIUS_Quant_Reasoning_Model

./: .gitignore  CHANGELOG.md  CURRENT_STATUS.md  Cargo.toml  DEVELOPMENT_ROADMAP.md  PHASE10_COMPLETE.md  PHASE11_COMPLETE.md  PHASE12_COMPLETE.md  PHASE13_COMPLETE.md  PHASE13_EXTENSIONS.md  PHASE13_FINAL.md  PHASE13_QUICKSTART.md  PHASE13_SUMMARY.md  PHASE6_DASHBOARD_ADVANCED_COMPLETE.md  PHASE7_AUTH_COMPLETE.md  PHASE8_FIX_APPLIED.md  PHASE8_WEBSOCKET_COMPLETE.md  PHASE9_CRITICAL_FIXES.md  PHASE9_INTEGRATION_TESTING.md  PHASE9_SETUP_COMPLETE.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  README.md  REST_API_SUMMARY.md  WALK_FORWARD_IMPLEMENTATION.md  docker-compose.yml
api/: config.py  main.py  requirements.txt  run_tests.bat  run_tests.sh  test_advanced_integration.py  test_auth_integration.py  test_integration.py  test_performance.py  test_phase13_extensions.py  validate_phase13.py
api/advanced/: __init__.py  indicators.py  ml_optimizer.py  multi_asset.py  portfolio_optimizer.py  risk_management.py  risk_metrics.py
api/cache/: __init__.py  manager.py
api/database/: optimization.py  user_crud.py  user_model.py
api/docs/: RISK_POLICY_API.md  STRATEGY_EVIDENCE_REFLEXION_API.md
api/primitives/: __init__.py  feature_flags.py  monitoring.py
api/routers/: advanced.py  auth.py  backtests.py  strategies.py  websocket.py  (+1 more)
crates/engine/: Cargo.toml
crates/engine/src/: determinism.rs  lib.rs
crates/engine/tests/: determinism.rs
dashboard/: PERFORMANCE_GUIDE.md  package.json
examples/: backtest_sp500_weekly_5pct_alpaca.py
python/: README.md  pyproject.toml
(+79 files in other folders)
